syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "common.proto";


option csharp_namespace = "TicketingApp.Protos";

service BookingService {
  rpc GetAllBookings(google.protobuf.Empty) returns (GetAllBookingReply);
  rpc AddBooking(Booking) returns (CustomOperationReply);

}
message BookingId {
  int32 Id = 1;
}

message Booking {
  int32 Id = 1;
  int32 ConcertId =2;
  int32 Price = 3;
  string Email = 4;
  string PaymentType =5;
  google.protobuf.Timestamp DateUTC = 6;
}

message GetAllBookingReply {
  repeated Booking booking = 1;
}

